//
// Created by Filipe on 12/12/2025.
//

#ifndef LETI_ESOFT_25_26_B1_FACILITYTYPE_H
#define LETI_ESOFT_25_26_B1_FACILITYTYPE_H

enum class FacilityType {
    HEALTHCARE = 0,
    COMMUNITY = 1
};

#endif //LETI_ESOFT_25_26_B1_FACILITYTYPE_H
