@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0


' ===== Enums / DTOs =====
  class FacilityType {
  HEALTHCARE
  COMMUNITY
}

class VaccinationCenterDTO {
  -name : string
  -postal_address : string
  -phone_number : string
  -email : string
  -website_address : string
  -opening_hours : string
  -closing_hours : string
  -max_vaccines_per_hour : int
  -facilityType : FacilityType
  -vaccineTypeCode : string
}

' ===== UI Layer =====
class RegisterVaccinationCenterView {
}

class RegisterVaccinationCenterController {
  +registerVaccinationCenter(dto : VaccinationCenterDTO) : void
  +registerVaccinationCenter(const VaccinationCenterDTO& dto)
  +listVaccineTypes() : vector<shared_ptr<VaccineType>>
}

class App {
  +std::shared_ptr<VaccinationCenterService> getVaccinationCenterService()
  +std::shared_ptr<VaccineTypeRepository> getVaccineTypeRepository()
  +std::shared_ptr<RepositoryFactory> getRepositoryFactory()
   }

RegisterVaccinationCenterView ..> RegisterVaccinationCenterController
RegisterVaccinationCenterController ..> VaccinationCenterDTO

' ===== Service Layer =====
class VaccinationCenterService {
+VaccinationCenterService(std::shared_ptr<VaccinationCenterRepository> ctrRepo, std::shared_ptr<VaccineTypeRepository> vtRepo)
+std::vector<std::shared_ptr<VaccineType>> listVaccineTypes()
+registerCenter(const VaccinationCenterDTO& dto): Result
}

RegisterVaccinationCenterController ..> VaccinationCenterService

' ===== Repository Interfaces =====
interface VaccinationCenterRepository <<interface>> {
  +virtual Result save(std::shared_ptr<Facility> obj)
  +virtual ~VaccinationCenterRepository() = default
}

interface VaccineTypeRepository <<interface>> {
  +virtual std::vector<std::shared_ptr<VaccineType>> findAll()
  +virtual std::shared_ptr<VaccineType> findByCode(const std::string& code)
  +virtual bool exists(const std::string& code)
  +virtual Result save(std::shared_ptr<VaccineType> obj)
}

' ===== Concrete Repositories (Memory) =====
    class VaccinationCenterMemoryRepository{
+Result save(std::shared_ptr<Facility> obj) override;
}
VaccinationCenterMemoryRepository .up.|> VaccinationCenterRepository

class VaccineTypeMemoryRepository {
  +findAll() : vector<shared_ptr<VaccineType>>
  +findByCode(code : string) : shared_ptr<VaccineType>
  +exists(code : string) : bool
}
VaccineTypeMemoryRepository .up.|> VaccineTypeRepository

' ===== Repository Factory =====
interface RepositoryFactory <<interface>>  {
   + virtual std::shared_ptr<VaccinationCenterRepository> getVaccinationCenterRepository() = 0;
   + virtual std::shared_ptr<VaccineTypeRepository> getVaccineTypeRepository() = 0;
  }


class MemoryRepositoryFactory {
  + getVaccinationCenterRepository(): VaccineCenterRepository
  + getVaccineTypeRepository(): VaccineTypeRepository
}

App "1" -down-> "1" RepositoryFactory:  uses
App --> VaccinationCenterService: adopts
RepositoryFactory ..> VaccinationCenterRepository
RepositoryFactory ..> VaccineTypeRepository
VaccinationCenterService ..> VaccinationCenterRepository
VaccinationCenterService ..> VaccineTypeRepository
MemoryRepositoryFactory .up.|> RepositoryFactory
MemoryRepositoryFactory .right.> VaccinationCenterMemoryRepository
MemoryRepositoryFactory .right.> VaccineTypeMemoryRepository

' ===== Domain Model =====
 abstract class Facility {
  -name : string
  -postal_address : string
  -phone_number : string
  -email : string
  -website_address : string
  -opening_hours : string
  -closing_hours : string
  -max_vaccines_per_hour : int
  Facility(string name, string postal_adress, string phone_number, string email, string website_address, string opening_hours, string closing_hours, int max_vaccines_per_hour)
}

class Healthcare_Center
class Community_Mass_Vaccination_Center {
  -vaccineType : shared_ptr<VaccineType>
}

Facility <|-- Healthcare_Center
Facility <|-- Community_Mass_Vaccination_Center

class VaccineType {
  -type_code : string
  -disease : string
  -short_description : string
}

VaccinationCenterRepository "1" --> "0..*" Facility : records >
VaccineTypeRepository "1" --> "0..*" VaccineType : records >

Community_Mass_Vaccination_Center "1" --> "1" VaccineType : administered >

@enduml
